[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rqt"
version = "0.1.0"
authors = [
    { name = "Raphael Nanje", email = "rtnanje@gmail.com" },
]
description = "A Python package for request testing"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "rich>=13.9.4",
    "ta-lib>=0.6.0",
]

[project.urls]
"Homepage" = "https://github.com/raphant/rqt"
"Bug Tracker" = "https://github.com/raphant/rqt/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rqt"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
