[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rqt"
version = "0.1.0a0"
authors = [
    { name = "Raphael Nanje", email = "rtnanje@gmail.com" },
]
description = "A Python package for request testing"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "gymnasium>=1.0.0",
    "keras>=3.7.0",
    "matplotlib>=3.10.0",
    "mplfinance>=0.12.10b0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "raphs-indicators",
    "rich>=13.9.4",
    "scikit-learn>=1.6.0",
    "ta-lib>=0.6.0",
]

[project.urls]
"Homepage" = "https://github.com/raphant/rqt"
"Bug Tracker" = "https://github.com/raphant/rqt/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rqt"]

[tool.uv.sources]
ccxt-easy-dl = { git = "https://github.com/raphant/ccxt-easy-dl.git" }
raphs-indicators = { git = "https://github.com/raphant/raphs-indicators.git" }

[dependency-groups]
dev = [
    "ccxt-easy-dl",
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
]
